add radio buttons
add radio buttons

--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <h4>Employee Policy</h4>
     <div id="main_div">
         <div id="div_left">
-            <label for="Policy_Code">Policy Code :<input type="text" align="div_right" name=""
-                    id="Policy_Code"></label><br>
+            <label for="Policy_Code">Policy Code :<input type="text" name="" id="Policy_Code"></label><br>
             <label for="Policy_Name">Policy_Name :<input type="text" name="" id="Policy_Name"></label><br>
-            <label for="Sal_deduct">Salary Deduction No Of Days :<input type="text" name="" id="Sal_deduct"></label><br>
-            <label for="Policy_Code">Deduction Attendance :<input type="text" name="" id="Policy_Code"></label><br>
-            <label for="Policy_Code">Deduction Time Allowances :<input type="text" name="" id="Policy_Code"></label><br>
-            <label for="Policy_Code">Monthly Day off :<input type="text" name="" id="Policy_Code"></label><br>
-            <label for="Policy_Code">Leaves Allow After (Month) :<input type="text" name=""
-                    id="Policy_Code"></label><br>
-            <label for="Policy_Code">Full Off Day 1 :<input type="text" name="" id="Policy_Code"></label><br>
-            <label for="Policy_Code">Full Off Day 2 :<input type="text" name="" id="Policy_Code"></label><br>
+            <label for="Sal_Deduct">Salary Deduction No Of Days :<input type="text" name="" id="Sal_Deduct"></label><br>
+            <label for="Attend_Deduct">Deduction Attendance :<input type="text" name="" id="Attend_Deduct"></label><br>
+            <label for="Allowance_Deduct">Deduction Time Allowances :<input type="text" name=""
+                    id="Allowance_Deduct"></label><br>
+            <label for="M_Off">Monthly Day off :<input type="text" name="" id="M_Off"></label><br>
+            <label for="M_Off_After">Leaves Allow After (Month) :<input type="text" name=""
+                    id="M_Off_After"></label><br>
+            <label for="F_Day_1">Full Off Day 1 :<input type="text" name="" id="F_Day_1"></label><br>
+            <label for="F_Day_2">Full Off Day 2 :<input type="text" name="" id="F_Day_2"></label><br>
+            <label for="Sal_Deduct_late">Salary Deduction Coming Late :<input type="radio" name="Salary Deduction"
+                    id=" Sal_Deduct_late">No
+                Deduction <br><input type="radio" name="Salary Deduction" id=" Sal_Deduct_late">No
+                Deduction <br><input type="radio" name="Salary Deduction" id=" Sal_Deduct_late">No
+                Deduction <br></label><br>
         </div>
         <div id="div_right">
             <form action="/action_page.php">
